# Nul_MM_Dashboard

./: .gitignore  TRIKERI_MARKETING_ENGINE_BUILD_PLAN.md  backend.spec  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
backend/: config.py  main.py
backend/ai/: analyzer.py  embedder.py  prompts.py  scheduler.py
backend/connectors/: __init__.py  base.py  discord.py  hackernews.py  manual.py  reddit.py  twitter.py  youtube.py
backend/database/: __init__.py  connection.py  migrations.py  models.py
backend/routers/: ai_analysis.py  analytics.py  campaigns.py  metrics.py  posts.py  products.py  profiles.py  settings.py
backend/services/: daily_pipeline.py  metric_collector.py
src/: App.css  App.tsx  index.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/server/: config.rs  error.rs  mod.rs
src-tauri/src/server/ai/: analyzer.rs  claude_cli.rs  embedder.rs  mod.rs  onnx_embedder.rs  prompts.rs  scheduler.rs
src-tauri/src/server/connectors/: discord.rs  hackernews.rs  manual.rs  mod.rs  reddit.rs  tiktok.rs  twitter.rs  youtube.rs
src-tauri/src/server/db/: mod.rs  models.rs
src-tauri/src/server/routes/: accounts.rs  ai_analysis.rs  analytics.rs  campaigns.rs  feeds.rs  metrics.rs  mod.rs  oauth.rs  posts.rs  products.rs  profiles.rs  settings.rs
src-tauri/src/server/services/: daily_pipeline.rs  metric_collector.rs  mod.rs
src-tauri/tests/: unit_tests.rs
src/components/: AIRecommendation.tsx  CampaignCard.tsx  EngagementChart.tsx  MetricSparkline.tsx  PlatformBadge.tsx  PostRow.tsx  ProfileSelector.tsx  TagInput.tsx  ThemeSwitcher.tsx
src/hooks/: useAccounts.ts  useActiveProfile.tsx  useApi.ts  useCampaigns.ts  useFeeds.ts  useMetrics.ts  useProfiles.ts  useTheme.ts
src/lib/: constants.ts  types.ts
src/pages/: AIInsights.tsx  Analytics.tsx  CampaignDetail.tsx  Dashboard.tsx  PostComposer.tsx  Settings.tsx
src/theme/: ThemeProvider.tsx  themes.json
